@@ -1,0 +1,12 @@
+#include "IOPool/TFileAdaptor/interface/TStorageFactoryFile.h"
+#include "IOPool/TFileAdaptor/interface/TStorageFactorySystem.h"
+#ifdef __CINT__
+
+#pragma link off all globals;
+#pragma link off all classes;
+#pragma link off all functions;
+
+#pragma link C++ class TStorageFactoryFile;
+#pragma link C++ class TStorageFactorySystem;
+
+#endif
